manifests/api.yml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-3days
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: workshop-3days
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      # initContainers:
      #   - name: migrate
      #     image: docker.io/library/workshop-api:latest
      #     imagePullPolicy: IfNotPresent
      #     command:
      #       - dotnet
      #       - api.dll
      #       - "--migrate"
      #     env:
      #       - name: CUSTOMCONNSTR_DefaultConnection
      #         value: "Host=db-postgresql.db.svc.cluster.local; Port=5432; Database=app_db; Username=app1; Password=AppPassword"
      containers:
      - name: api
        image: docker.io/library/workshop-api:latest
        imagePullPolicy: IfNotPresent
        # livenessProbe:
        #     httpGet:
        #       path: /health
        #       port: 8080
        #     initialDelaySeconds: 3
        #     periodSeconds: 3
        ports:
          - name: http
            containerPort: 8080
        # env:
          # - name: CUSTOMCONNSTR_DefaultConnection
          #   value: "Host=db-postgresql.db.svc.cluster.local; Port=5432; Database=app_db; Username=app1; Password=AppPassword"
          # - name: CUSTOMCONNSTR_HangfireConnection
          #   value: "Host=db-postgresql.db.svc.cluster.local; Port=5432; Database=app_db; Username=app1; Password=AppPassword"
          # - name: CUSTOMCONNSTR_RabbitMq
          #   value: "amqp://user:RabbitMqPassword@rabbitmq.default.svc.cluster.local"
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop-3days
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: workshop-3days
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api
            port:
              number: 80
